--- a/templates/page.html
+++ b/templates/page.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
-
 {% block content %}
-<h1 class="title">
-  {{ page.title }}
-</h1>
-<p class="subtitle"><strong>{{ page.date }}</strong></p>
-{{ page.content | safe }}
+<div>
+  <h1 id="blog-title">{{ page.title }}</h1>
+  {% if page.date %}
+  <small class="blog-date">{{ page.date }}</small>
+  {% endif %}
+</div>
+<div id="blog">
+  {{ page.content | markdown | safe }}
+</div>
 {% endblock content %}
