--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,7 @@
 <h1 class="title">{{ section.title }} -</h1>
 <div id="blog-list">
   <blockquote>
-    Here is the list of my blogs, i write tons of bullshit after two drinks and forget later.
+    They first make you sign in, then they'll push you to make your first small purchase, And that's how the trap begins.
   </blockquote>
   {% for page in section.pages %}
   <div id="blog-summary">
